# ComfyUI-fal-API

./: .gitignore  CONTRIBUTING.md  MODELS.md  README.md  __init__.py  config.ini  config.ini.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  registry-refresh.yml
data/: featured_models.json
example_workflows/: Flux-Kontext-Workflow.json  Flux-v1-Fill.json  Nano-Banana-Pro-14_Images.json  Video-Bria-Increase-Resolution.json  Video-Seedvr-Upscale.json  Video-Workflow-Veo2.json  flux-kontext-fal-example.json
nodes/: api_node.py  billing_node.py  builder_node.py  fal_utils.py  image_node.py  inbox_node.py  llm_node.py  platform_node.py  server_routes.py  trainer_node.py  upscaler_node.py  util_data_node.py  util_dataset_node.py  util_image_node.py  util_media_in_node.py  util_video_node.py  video_node.py  vlm_node.py
nodes/dynamic/: __init__.py  _fixture_registry.json  _selftest.py  any_endpoint.py  arguments.py  factory.py  outputs.py  registry_loader.py  schema_to_inputs.py
scripts/: build_readme.py  build_registry.py
tests/: conftest.py  helpers.py  legacy_node_keys.json  pytest.ini  test_arguments.py  test_billing_guard.py  test_errors.py  test_job_store.py  test_ledger.py  test_mappings.py  test_outputs.py  test_platform_nodes.py  test_pricing.py  test_provenance.py  test_registry_format.py  test_result_cache.py  test_schema_to_inputs.py  test_server_routes.py  test_url_passthrough.py  test_util_nodes.py
web/: fal_api.js  fal_autocomplete.js  fal_badges.js  fal_platform.css  fal_platform.js  fal_sidebar.js
(+16 files in other folders)
